_sass/_layout.scss
// Body and main layout
html {
    background: var(--tertiary-color);
}

body {
    position: relative;
    overflow: hidden;
    transition: opacity 0.3s ease-in-out;
    overflow-x: hidden;
    background: 
        url('/assets/images/pattern.png'),
        repeating-linear-gradient(
            45deg,
            transparent 0,
            transparent 1px,
            rgba(255, 255, 255, 0.1) 2px,
            rgba(255, 255, 255, 0.1) 4px
        ),
        repeating-linear-gradient(
            90deg, 
            var(--quaternary-color) 0%,
            var(--primary-color) 10%,
            var(--quaternary-color) 25%,
            var(--primary-color) 50%,
            var(--quaternary-color) 60%,
            var(--secondary-color) 75%,
            var(--primary-color) 90%,
            var(--quaternary-color) 100%
        );
    background-size: 3rem 3rem, cover, 400% 400%;
    background-position: center center, center center, 0% 0%;
    background-repeat: repeat, repeat, repeat;
    animation: holo 30s linear infinite;
    
    &::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: 
            linear-gradient(
                125deg,
                rgba(255,255,255,0) 0%,
                rgba(255,255,255,0) 5%,
                rgba(255,255,255,0.2) 10%,
                rgba(255,255,255,0.8) 15%,
                rgba(255,255,255,0.2) 20%,
                rgba(255,255,255,0) 25%,
                rgba(255,255,255,0) 35%,
                rgba(255,255,255,0.2) 40%,
                rgba(255,255,255,0.8) 45%,
                rgba(255,255,255,0.2) 50%,
                rgba(255,255,255,0) 55%,
                rgba(255,255,255,0) 65%,
                rgba(255,255,255,0.2) 70%,
                rgba(255,255,255,0.8) 75%,
                rgba(255,255,255,0.2) 80%,
                rgba(255,255,255,0) 85%,
                rgba(255,255,255,0) 100%
            );
        pointer-events: none;
        mix-blend-mode: overlay;
        transition: opacity 0.3s ease-in-out;
        opacity: 1;
        z-index: 100;
        animation: fade-streaks 10s ease-in-out infinite;
    }

    @media (max-width: 768px), (max-height: 640px) {
        overflow: auto;
    }
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    overflow: hidden;
    position: relative;

    @media (max-width: 768px), (max-height: 640px) {
        min-height: 100vh;
        height: auto;
        padding-bottom: 8rem;
    }
}

article {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 1rem;
    width: 640px;
    max-width: 100%;
    padding: 1rem;
}

hr {
    border: 0;
    border-top: 2px solid white;
    border-radius: 9999px;
    max-width: 2rem;
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    width: 100%;
}

.desktop {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    gap: 1rem;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    padding: 1rem;
    position: relative;
    padding-top: 3.5rem;
    justify-content: flex-end;
    align-content: flex-start;
    min-height: 100vh;

    @media (max-width: 768px), (max-height: 640px) {
        height: auto;
        min-height: auto;
    }
}

.top-bar {
    display: flex;
    width: 100%;
    animation: slide-down 0.4s ease-in-out;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
    height: 2.5rem;
    padding-left: 1rem;
    padding-right: 1rem;
    gap: 1rem;
    z-index: 400;
    backdrop-filter: blur(1rem);
    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
    -webkit-backdrop-filter: blur(1rem);
    position: fixed;
    background-color: rgba(0, 0, 0, 0.1);
    top: 0;
    width: 100%;
    
    div {
        display: flex;
        align-items: center;
        gap: 1rem;
        flex-wrap: wrap;
        
        &.avatar {
            gap: 0.5rem;
        }

        &.hide {
            @media (max-width: 768px) {
                display: none;
            }
        }

        img {
            width: 1.5rem;
            height: 1.5rem;
            border-radius: 9999px;
            border: 1px solid white;
            box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
        }
    }
}

.dock {
    transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
    display: flex;
    animation: slide-up 0.6s ease-in-out;
    flex-direction: row;
    align-items: center;
    gap: 0.5rem;
    padding: 1rem;
    z-index: 400;
    backdrop-filter: blur(1rem);
    -webkit-backdrop-filter: blur(1rem);
    position: fixed;
    bottom: 1rem;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 1.5rem;
    box-shadow: 0 1rem 2rem 0 rgba(0, 0, 0, 0.2);

    &:hover {
        transform: scale(1.02);
        background-color: rgba(255, 255, 255, 0.1);
    }
    
    a {
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 3rem;
        height: 3rem;
        border-radius: 1rem;
        color: white;
        border: 2px solid rgba(255, 255, 255, 0.1);

        i {
            font-size: 1rem;
        }
        &:hover {
            transform: translateY(-0.25rem);
            border-color: white;
            color: white;
        }
    }
}
/* ... */

